
IMPROVEMENTS
------------

* It's now possible to configure ``test_run_concurrency`` in ``.testr.conf``
  to have concurrency defined by a callout. (Robert Collins)

INTERNALS
---------

* TestCommand is now a fixture. This is used to ensure cached test instances
  are disposed of - if using the object to run or list tests, you will need
  to adjust your calls. (Robert Collins)

0.0.9
+++++

IMPROVEMENTS
------------

* On OSX the ``anydbm`` module by default returns an implementation that
  doesn't support update(). Workaround that by falling back to a loop.
  (Robert Collins, #1091500)

* ``testr --analyze-improvements`` now honours test regex filters and only
  analyzes matching tests. (Robert Collins)

0.0.8
+++++

CHANGES
-------

* As a side effect of fixing bug #597060 additional arguments passed to testr
  run or testr list are only passed to the underlying test runner if they are
  preceeded by '--'. (Robert Collins, #597060)

* ``testr run --failing`` will no longer run any tests at all if there are
  no failing tests. (Robert Collins, #904400)

IMPROVEMENTS
------------

* ``AbstractArgument`` now handles the case where additional arguments are
   present that the argument type cannot parse, but enough have been parsed for
   it to be valid. This allows optional arguments to be in the middle of a
   grammar. (Robert Collins)

* ``cli.UI`` now passed '--' down to the argument layer for handling rather
  than implicitly stripping it. (Robert Collins)

* ``DoubledashArgument`` added to allow fine grained control over the impact of
  -- in command lines. (Robert Collins)

* New argument type ``ExistingPathArgument`` for use when commands want to take
  the name of a file. (Robert Collins)

* ``testr`` will now show the version. (Robert Collins)

* ``testr last`` when just one test run has been run works again.
  (Robert Collins)

* ``testr help command`` now shows the docstring for commands (Robert Collins)
